# toroidal-coordinator

./: README.md  pyproject.toml
coordinator/: __init__.py  audit.py  client.py  fallback.py  heartbeat.py  locks.py  messages.py  tasks.py
schema/: 001_init.sql  002_indexes.sql  003_functions.sql
tests/: test_coordinator.py
