[project]
name = "toroidal-coordinator"
version = "0.1.0"
description = "Distributed agent coordination via Neon Postgres"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coordinator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
